feat: clean up hello world and styles

--- a/static/index.html
+++ b/static/index.html
@@ -13,8 +13,8 @@
       </a>
       <nav>
         <a href="/">Hello World</a>
-        <a href="/">Newsletter</a>
-        <a href="/">Petition</a>
+        <a href="/newsletter.html">Newsletter</a>
+        <a href="/vote.html">Vote</a>
       </nav>
     </header>
     <main>
