feat: add footer

--- a/static/success.html
+++ b/static/success.html
@@ -28,5 +28,23 @@
         <a href="/newsletter.html">&larr; back to the demo</a>
       </p>
     </main>
+
+    <footer>
+      <p>
+        Created by <a href="https://jason.af">Jason Lengstorf</a> ·
+        <a href="https://github.com/jlengstorf/magnolia-serverless"
+          >source code</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://app.netlify.com/start/deploy?repository=https://github.com/jlengstorf/magnolia-serverless"
+          class="btn"
+          ><img
+            src="https://www.netlify.com/img/deploy/button.svg"
+            alt="Deploy to Netlify"
+        /></a>
+      </p>
+    </footer>
   </body>
 </html>
