--- a/static/vote.html
+++ b/static/vote.html
@@ -154,6 +154,24 @@
       </div>
     </main>
 
+    <footer>
+      <p>
+        Created by <a href="https://jason.af">Jason Lengstorf</a> ·
+        <a href="https://github.com/jlengstorf/magnolia-serverless"
+          >source code</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://app.netlify.com/start/deploy?repository=https://github.com/jlengstorf/magnolia-serverless"
+          class="btn"
+          ><img
+            src="https://www.netlify.com/img/deploy/button.svg"
+            alt="Deploy to Netlify"
+        /></a>
+      </p>
+    </footer>
+
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script>
       function showResults() {
