feat: starting point

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,7 @@
     </header>
 
     <main>
-      <h1>Hello World Serverless Function</h1>
-      <a href="/.netlify/functions/hello-world"
-        >Click to run the serverless function!</a
-      >
+      <h1>Hello MagnoliaJS!</h1>
     </main>
 
     <footer>
