--- a/src/newsletter.html
+++ b/src/newsletter.html
@@ -5,54 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Serverless Functions for MagnoliaJS</title>
     <link rel="stylesheet" href="css/main.css" />
-    <style>
-      form {
-        border: 1px solid rgba(40, 40, 40, 0.5);
-        border-radius: 0.5rem;
-        margin: 2rem auto;
-        max-width: 400px;
-        padding: 1rem;
-      }
-
-      label,
-      input {
-        display: block;
-      }
-
-      label {
-        font-size: 0.875rem;
-        margin-top: 0.5rem;
-      }
-
-      input {
-        border: 1px solid rgb(40, 40, 40);
-        border-radius: 0.5rem;
-        font-size: 1rem;
-        padding: 0.5rem;
-        width: 100%;
-      }
-
-      button {
-        background: darkblue;
-        border: none;
-        border-radius: 0.5rem;
-        color: white;
-        font-size: 2rem;
-        font-weight: 800;
-        letter-spacing: -0.05em;
-        margin-top: 1rem;
-        padding: 0 1rem;
-        text-transform: uppercase;
-      }
-
-      .privacy {
-        color: rgb(75, 75, 75);
-        font-size: 0.875rem;
-        margin: 2rem 0 0;
-        font-style: italic;
-        text-align: center;
-      }
-    </style>
   </head>
   <body>
     <header>
@@ -81,7 +33,9 @@
         get content about building better websites, y’know, wink wink nudge
         nudge...
       </p>
-      <form action="/.netlify/functions/subscribe" method="POST">
+
+      <!-- TODO add a newsletter form -->
+      <form>
         <h2>Build better web apps</h2>
         <p>
           I spend a lot of time thinking about how to
@@ -94,15 +48,9 @@
           Join my newsletter and I’ll boop you on the brain what I’ve learned
           about building modern web apps.
         </p>
-        <label htmlFor="firstName"
-          >First Name <input type="text" name="firstName" id="firstName"
-        /></label>
-        <label htmlFor="email"
-          >Email <input type="email" name="email" id="email"
-        /></label>
-        <button type="submit">
-          Subscribe
-        </button>
+
+        <!-- TODO add form controls -->
+
         <p class="privacy">
           <strong>Privacy notice:</strong> I will never sell or share your
           personal information with anyone (because I’m not a jerk). Unsubscribe
