add our first serverless function

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,9 @@
 
     <main>
       <h1>Hello MagnoliaJS!</h1>
+      <a href="/.netlify/functions/hello-world"
+        >Run your first serverless function</a
+      >
     </main>
 
     <footer>
